# NeuroLabClean

clean/: COPYRIGHTS  ChangeLog  CleanData.m  CleanData2.m  Daq2CleanUsersManual.doc  Daq2CleanUsersManual.odt  Daq2CleanUsersManual.txt  LICENSE  Makefile.am  README  UsersManual.1.odt  UsersManualxxx.1.txt  chans_to_bin.c  chs.new.sh  clean_rec.sh  configure.ac  daq2.glade  daq2_split  daq2_split.c  daq2_unsplit  daq2_unsplit.c  daq_to_bin.c  dirtest.m  dirtest.sh  do_clean_data.m  do_clean_data.sh  do_clean_data2.m  do_noclean_data.sh  make_chan.new.sh  make_chan.sh  make_label.sh  split_all.sh  update.sh  waveform.tcl
clean/debian/: README  README.Debian  README.source  changelog  control  copyright  daq2-clean.cron.d.ex  daq2-clean.default.ex  daq2-clean.doc-base.EX  docs  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
